# k-means-from-scratch

./: README.md
base_kmins/: README.md  test.ipynb
kvenv/: pyvenv.cfg
old_project/: pyproject.toml
old_project/kmins/: kmins.py  test.ipynb  test.py
old_project/kmins/methods/: __init__.py  elbow_method.py
