[tool.poetry]
name = "keimins"
version = "0.1.0"
description = ""
authors = ["SandovalAguilar <ismael.sandoval.aguilar@gmail.com>", "mauls12 <fnaticcsgo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
